2009-07-17  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in:
	* data/totem.ui:
	* src/plugins/screensaver/totem-screensaver.c
	(totem_screensaver_update_from_state):
	* src/totem-preferences.c (lock_screensaver_on_audio_changed_cb),
	(totem_setup_preferences): Fix wording of the checkbox to
	allow the screensaver to start when audio streams are playing
	(Closes: #526264)

2009-07-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c (totem_action_add_recent):
	* src/totem-object.c (totem_action_set_mrl_with_warning),
	(totem_action_open_files_list), (totem_action_remote):
	Only call totem_action_add_recent() when playing the file,
	not when adding it to the playlist

2009-07-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c:
	* configure.ac:
	Require the lastest gstreamer and gst-plugins-base pre-releases
	for many playbin2 related bugfixes and remove some backward
	compatibility code.

2009-07-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
	
	* src/backend/bacon-video-widget-gst-0.10.c:
	Try to mount GIO locations that are not mounted yet (Closes: #588079).
	This requires the giosrc element from gst-plugins-base 0.10.23.2.

2009-07-16  Robin Stocker  <robin@nibor.org>

	* src/totem-object.c (drop_video_cb, drag_video_cb):
	* src/totem-private.h (TotemObject): When dragging the video and
	then accidentally dropping it again on itself, ignore it instead
	of restarting the video. (Closes: #578249)

2009-07-14  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c (setup_vis):
	Sink the floating reference on the visualisation element
	before giving it to playbin2, so that we can make sure we own
	the ref regardless of what playbin2 does internally. playbin2
	currently sinks the element itself, but may change.

2009-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c: